--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "papaparse": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28"
   }
 }
